kubernetes/apps/media/bazarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: bazarr
  ports:
    - port: 6767
      targetPort: 6767
